--- a/src/style/index.css
+++ b/src/style/index.css
@@ -30,6 +30,10 @@ body {
     color: var(--color-base01);
 }
 
+li {
+    padding: 5px 0px;
+}
+
 a {
     color: var(--color-blue);
     text-decoration: none;
@@ -49,6 +53,10 @@ hr {
     border-width: 1px 0 0;
     border-style: solid;
     border-color: var(--color-base1);
+}
+
+h1 {
+    font-size: 33px;
 }
 
 h1, h2 {
