--- a/src/style/index.css
+++ b/src/style/index.css
@@ -24,7 +24,7 @@
 }
 
 body {
-    font-family: "Ubuntu Mono", "Cormorant Garamond", "serif";
+    font-family: "Hermit", "Ubuntu Mono", "Cormorant Garamond", "serif";
     margin: 0;
     background-color: var(--color-base3);
     color: var(--color-base01);
@@ -37,6 +37,10 @@ li {
 a {
     color: var(--color-blue);
     text-decoration: none;
+}
+
+img {
+    background-color: white;
 }
 
 a:visited {
