--- a/src/style/App.module.css
+++ b/src/style/App.module.css
@@ -1,9 +1,12 @@
 .container {
-    width: 50%;
+    width: 60%;
     margin: 20px auto 10px auto;
+    padding: 0 40px;
+    border-style: none solid;
+    border-width: 0 2px;
 }
 
-@media screen and (max-width: 666px) {
+@media screen and (max-width: 1200px) {
   .container {
       width: 90%
   }
