--- a/src/style/index.css
+++ b/src/style/index.css
@@ -3,19 +3,19 @@
 :root {
     --color-base03: #002b36;
     --color-base02: #073642;
-    --color-base01: #586e75;
+    --color-base01: #000000;
     --color-base00: #657b83;
     --color-base0: #839496;
     --color-base1: #93a1a1;
     --color-base2: #eee8d5;
-    --color-base3: #fdf6e3;
+    --color-base3: #ffffff;
     --color-yellow: #b58900;
     --color-orange: #cb4b16;
     --color-red: #dc322f;
     --color-magenta: #d33682;
-    --color-violet: #6c71c4;
-    --color-blue: #268bd2;
-    --color-cyan: #2aa198;
+    --color-violet: #250f90;
+    --color-blue: #005090;
+    --color-cyan: #0080ff;
     --color-green: #859900;
 }
 
@@ -61,9 +61,10 @@ hr {
 }
 
 h1 {
-    font-size: 33px;
+    font-size: 2rem;
 }
 
 h1, h2 {
     margin-bottom: 10px;
+    line-height: 150%;
 }
