--- a/resources/style.css
+++ b/resources/style.css
@@ -79,6 +79,11 @@ h1, h2 {
     margin: 3em auto 1em auto;
     padding: 0 20%;
 }
+@media (max-width: 1000px) {
+    .container {
+        padding: 0 5%;
+    }
+}
 .article-card {
     display: flex;
     justify-content: flex-start;
